test/cases/compile_errors/stage1/obj/issue_9346_return_outside_of_function_scope.zig
pub const empty = return 1;

// error
// backend=stage1
// target=native
//
// tmp.zig:1:19: error: 'return' outside function scope
